; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_mcs_recv_cjcf.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_mcs_recv_cjcf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@False = common dso_local global i32 0, align 4
@MCS_CJCF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"expected CJcf, got %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"CJrq: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mcs_recv_cjcf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs_recv_cjcf() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = call i32* (...) @iso_recv()
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @False, align 4
  store i32 %9, i32* %1, align 4
  br label %44

10:                                               ; preds = %0
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @in_uint8(i32* %11, i32 %12)
  %14 = load i32, i32* %2, align 4
  %15 = ashr i32 %14, 2
  %16 = load i32, i32* @MCS_CJCF, align 4
  %17 = icmp ne i32 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %10
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @error(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* @False, align 4
  store i32 %21, i32* %1, align 4
  br label %44

22:                                               ; preds = %10
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @in_uint8(i32* %23, i32 %24)
  %26 = load i32, i32* %3, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %22
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @error(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  %31 = load i32, i32* @False, align 4
  store i32 %31, i32* %1, align 4
  br label %44

32:                                               ; preds = %22
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @in_uint8s(i32* %33, i32 4)
  %35 = load i32, i32* %2, align 4
  %36 = and i32 %35, 2
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %32
  %39 = load i32*, i32** %4, align 8
  %40 = call i32 @in_uint8s(i32* %39, i32 2)
  br label %41

41:                                               ; preds = %38, %32
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @s_check_end(i32* %42)
  store i32 %43, i32* %1, align 4
  br label %44

44:                                               ; preds = %41, %28, %18, %8
  %45 = load i32, i32* %1, align 4
  ret i32 %45
}

declare dso_local i32* @iso_recv(...) #1

declare dso_local i32 @in_uint8(i32*, i32) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @in_uint8s(i32*, i32) #1

declare dso_local i32 @s_check_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
